# fotoware-http-get-by-id-fastapi

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: publish-image.yaml
app/: apptoken.py  assign_metadata_tasks.py  config.py  fotoware.py  log.py  main.py  persistence.py  previews.py  resource_identifier.py  slugify.py
app/renderers/: __init__.py  asset.html.jinja  html.py  jsonld.py  reprs.py
app/routers/: doc_img.py  id_json.py  responsetype.py  robots_txt.py  tasks.py  token.py
app/tasks/: __init__.py  detectobject.py  perceptualhash.py  sha256.py  uuid.py
scripts/: entry.sh
