[tool.poetry]
name = "fotoware-http-get-by-id-fastapi"
version = "v1.2.0"
description = "Retrieve a Fotoware asset with a unique identifier using a regular GET request"
authors = ["Redmer Kronemeijer <12477216+redmer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "fotoware_http_get_by_id_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
PyJWT = "^2.6.0"
slowapi = "^0.1.8"
pymemcache = "^4.0.0"
requests = "^2.28.2"
pydantic = "^1.10.7"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
