[tool.poetry]
name = "fotoware-http-get-by-id-fastapi"
version = "v4.1.0"
description = "Retrieve a Fotoware asset with a unique identifier using a regular GET request"
authors = ["Redmer Kronemeijer <12477216+redmer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "fotoware_http_get_by_id_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
PyJWT = "^2.6.0"
slowapi = "^0.1.8"
pydantic = "^1.10.7"
jinja2 = "^3.1.2"
httpx = "^0.24.1"
aiohttp = "^3.8.4"
aiohttp-client-cache = {extras = ["redis"], version = "^0.8.1"}
redis = "^4.5.5"
cashews = {extras = ["redis"], version = "^6.1.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
