[tool.poetry]
name = "fotoware-http-get-by-id-fastapi"
version = "v4.3.0"
description = "Retrieve a Fotoware asset with a unique identifier using a regular GET request"
authors = ["Redmer Kronemeijer <12477216+redmer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "fotoware_http_get_by_id_fastapi"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.21.1"
PyJWT = "^2.6.0"
slowapi = "^0.1.8"
pydantic = "^1.10.13"
jinja2 = "^3.1.4"
httpx = "^0.24.1"
aiohttp = "^3.9.4"
aiohttp-client-cache = {extras = ["redis"], version = "^0.8.1"}
redis = "^4.5.5"
cashews = {extras = ["redis"], version = "^6.1.0"}
frozenlist = "^1.4"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
